CUDDocHelper/Target/2014_12_22/JDoc/user-web/JavaDocErr.txt
javadoc: warning - No source files for package resources
javadoc: warning - No source files for package ru
javadoc: warning - No source files for package test
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:3: error: package javax.faces.event does not exist
import javax.faces.event.PhaseEvent;
                        ^
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:4: error: package javax.faces.event does not exist
import javax.faces.event.PhaseId;
                        ^
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:5: error: package javax.faces.event does not exist
import javax.faces.event.PhaseListener;
                        ^
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:7: error: package org.slf4j does not exist
import org.slf4j.Logger;
                ^
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:8: error: package org.slf4j does not exist
import org.slf4j.LoggerFactory;
                ^
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:19: error: cannot find symbol
 public class MyPhaseListener implements PhaseListener {
                                         ^
  symbol: class PhaseListener
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:22: error: cannot find symbol
	private static final Logger LOGGER = LoggerFactory.getLogger(MyPhaseListener.class);
	                     ^
  symbol:   class Logger
  location: class MyPhaseListener
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:27: error: cannot find symbol
    public PhaseId getPhaseId() {
           ^
  symbol:   class PhaseId
  location: class MyPhaseListener
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:35: error: cannot find symbol
    public void beforePhase(PhaseEvent event) {
                            ^
  symbol:   class PhaseEvent
  location: class MyPhaseListener
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:49: error: cannot find symbol
    public void afterPhase(PhaseEvent event) {
                           ^
  symbol:   class PhaseEvent
  location: class MyPhaseListener
javadoc: warning - No source files for package resources
javadoc: warning - No source files for package ru
javadoc: warning - No source files for package test
C:\jboss-as-7.1.3.Final-fighting-mvn\git\ru.spb.iac.cud\user-web\src\main\java\mypackage\MyPhaseListener.java:22: error: cannot find symbol
	private static final Logger LOGGER = LoggerFactory.getLogger(MyPhaseListener.class);
	                                     ^
  symbol:   variable LoggerFactory
  location: class MyPhaseListener
